Almost done with BTrees